# helloworld-capnproto-streamer

./: .gitignore  README.md  capnproto.pri  position-streamer.pri  position-streamer.pro  position.capnp  quaternion-streamer.pri  quaternion-streamer.pro  quaternion.capnp
position-receiver/: myposition.cpp  myposition.h  position-receiver.pro  positionreceiver.cpp  positionreceiver.h
position-receiver-qt/: main.cpp  myposition.cpp  myposition.h  options.cpp  position-receiver-qt.pro  positionreceiver.cpp
position-receiver-qt/qml/: main.qml
position-receiver-qt/src/: main.cpp  myposition.cpp  myposition.h  options.h  position.cpp  position.h  positionreceiver.cpp  positionreceiver.h  qposition.cpp  qposition.h
position-sender/: CMakeLists.txt  main.cpp  position-sender.pro  positionsender.cpp  positionsender.h
position-sender-qt/: main.cpp  position-sender-qt.pro  positionsender.cpp  positionsender.h
position-sender/cmake/CapnProto/: CapnProtoConfig.cmake  CapnProtoConfigVersion.cmake
position-sender/src/: main.cpp  options.cpp  options.h  positionstreamtest.cpp  positionstreamtest.h  rpmsgpositionstreamer.cpp  rpmsgpositionstreamer.h
position-sender/src/rpmsg/: rpmsg.c  rpmsg.h
quaternion-receiver/: main.cpp  quaternion-receiver.pro  quaternionsocket.cpp  quaternionsocket.h
quaternion-sender/: main.cpp  quaternion-sender.pro  quaternionsocket.cpp  quaternionsocket.h
